# got

./: .pre-commit-config.yaml  README.md  docker-compose.dev.yml
backend/: .env.dev  Dockerfile.dev  log_utils.py  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/endpoints/: matches.py  seasons.py  teams.py
backend/db/: __init__.py  confdb.py  event.py  interface.py
backend/db/models/: __init__.py  event.py  matches.py  seasons.py  teams.py
docs/: overview.md
frontend/: Dockerfile.dev  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api_types/: models.ts
frontend/src/components/: Event.tsx  Layout.tsx  TextBox.tsx
frontend/src/pages/: RulesPage.tsx  SeasonsPage.tsx
scripts/: py2ts.sh
