[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.8",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "alembic>=1.15.1",
    "ipython>=8.32.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]

[tool.ruff]
lint.extend-ignore = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
